--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Primer upload from VS Code</h1>
-    <p>Primer Update con openshift usando .netCore img</a>.</p>
+    <h1 class="display-4">Segundo upload from VS Code</h1>
+    <p>Segundo Update con openshift usando .netCore img</a>.</p>
 </div>
