--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">primer upload from VS Code</h1>
-    <p>Segundo Update con openshift usando .netCore img</a>.</p>
+    Hello Word
 </div>
