--- a/app/Views/Home/Index.cshtml
+++ b/app/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Primer test con cambio en consola web Openshift</h1>
+    <h1 class="display-4">Primer test con cambio en consola web Openshift.</h1>
     TEST 1 OPENSHIFT
 </div>
